Version 2.5.33dev:

* If STEAM_RUNTIME is set, look for "steamos" plugins, not "linux" plugins.
* Plugin search path updated (also changed plugin format slightly).

Version 2.5.32dev:

* Choose which monitor FS-UAE appears on in full-screen mode.
* Added mime type application/x-adf for Linux desktops.
* Updated emulation core from WinUAE 3100.

Version 2.5.31dev:

* Fixed a time offset bug in my_utime used by action_set_date.
* Temporarily disabled serial port emulation (need code update).
* Fixed handling of configurations_dir and cache_dir options.
* Imported updated translations from crowdin.com.
* Updated emulation core from WinUAE 3100b23.

Version 2.5.30dev:

* Fixed ROM initialization of Cyberstorm PPC.
* Lowered default volume of floppy drive sounds.
* Updated emulation core from WinUAE 3100b14.

Version 2.5.29dev:

* Updated emulation core from WinUAE 3100b11.

Version 2.5.28dev:

* Detect portable dir without help from FS-UAE Launcher.
* Updated emulation core from WinUAE 3100b8.

Version 2.5.27dev:

* Implemented prefix expansion for screenshots_output_dir.
* Implemented joystick_port_0_autoswitch = 0 for the relatively new
  automatic mouse mode switching feature (in order to disable it).
* Updated emulation core from WinUAE 3100b6.

Version 2.5.26dev:

* Option sound_card = toccata actually implemented now.
* Updated emulation core from WinUAE 3100b2.

Version 2.5.25dev:

* New option sound_card = toccata.
* Added several joystick configs [johanpalmqvist].
* Updated emulation core from WinUAE 3100b1.

Version 2.5.23dev:

* Fixed loading of Picasso IV ROM when using graphics_card_rom_option.
* Read plugins from [prefix]/lib/fs-uae/plugins too.
* Updated emulation core from WinUAE 3000.

Version 2.5.22dev:

* Updated emulation core from WinUAE 3000b28.

Version 2.5.21dev:

* Added file version information to fs-uae.exe
* Updated Windows build/dist system to work with MSYS2.
* Also check for plugin .dll/.so in executable directory and