@@ -2,4 +2,4 @@ fs-uae (2.5.32dev-0) unstable; urgency=low
 
   * Dummy changelog entry.
 
- -- Frode Solheim <fs-uae@fengestad.no>  Sat, 13 Jun 2015 23:12:48 +0200
+ -- Frode Solheim <fs-uae@fengestad.no>  Sat, 11 Jul 2015 16:37:51 +0200
